--- a/angular/src/app/tags/tags.scss
+++ b/angular/src/app/tags/tags.scss
@@ -23,7 +23,7 @@
 	background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
 	border-radius: 30px 5px 5px 30px;
 	padding: 3px 10px 3px 20px;
-	margin: 6px 4px;
+	margin: 0px 4px 6px 4px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
@@ -42,7 +42,7 @@
 		border: inherit;
 		background-color: #FFFFFF;
 		display: inline-block;
-		margin-left: -12px;
+		margin: 0 4px 0 -12px;
 		background-clip: content-box;
 	}
 }
