--- a/angular/src/app/things/things.scss
+++ b/angular/src/app/things/things.scss
@@ -2,7 +2,7 @@
 	border: 1px rgba(0, 0, 0, 0.3) solid;
 	background: linear-gradient(to bottom, rgba(100, 150, 255, 0.06), rgba(0, 25, 50, 0.06));
 	padding: 5px;
-	margin: 10px 5px;
+	margin: 0px 5px 10px 5px;
 
 	&:hover {
 		border-color: rgba(0, 0, 0, 0.5);
